--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "tsconfig",
     "lib": ["es2018", "dom"],
     "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
@@ -14,10 +15,10 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "target": "ES2015",
+    "strictNullChecks": true,
+    "target": "es6",
     "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/files/**/*", "node_modules", "**/*.spec.ts"]
+  "exclude": ["src/*/files/**/*", "src/keycloak-theme/**/*"]
 }
